[project]
name = "bayesian_cortex"
version = "0.1.2"
description = "Dynamic Agent Routing via Contextual Multi-Arm Bayesian Bandits"
readme = "README.md"
authors = [
    { name = "Sam Tritto", email = "59342606+sam-tritto@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "redis>=5.0.0",
    "mcp>=0.1.0",
    "sqlite-vec>=0.1.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
local-ml = [
    "sentence-transformers>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/sam-tritto/bayesian-cortex"
Repository = "https://github.com/sam-tritto/bayesian-cortex"
Issues = "https://github.com/sam-tritto/bayesian-cortex/issues"
Changelog = "https://github.com/sam-tritto/bayesian-cortex/releases"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.0.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/bayesian_cortex"]
omit = ["tests/*", "demo.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 63
